# sm-bridge

./: .gitignore  README.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: example_registry.py
sm_bridge/: __init__.py  converter.py  federation.py  gateway.py  models.py  router.py  store.py
tests/: conftest.py  test_federation.py  test_gateway.py  test_sm_bridge.py  test_sm_bridge_extra.py
