[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sm-bridge"
version = "0.3.1"
description = "A Python library for building NANDA-compatible AI agent registries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "StellarMinds", email = "hello@stellarminds.ai" }
]
keywords = [
    "nanda",
    "ai-agents",
    "agent-registry",
    "fastapi",
    "did",
    "decentralized-identity",
    "mcp",
    "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
integrity = ["sm-model-integrity-layer>=0.1.0"]
governance = ["sm-model-governance>=0.1.0"]
card = ["sm-model-card>=0.1.0"]
provenance = ["sm-model-provenance>=0.1.0"]
all = [
    "sm-model-integrity-layer>=0.1.0",
    "sm-model-governance>=0.1.0",
    "sm-model-card>=0.1.0",
    "sm-model-provenance>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Sharathvc23/sm-bridge"
Documentation = "https://github.com/Sharathvc23/sm-bridge#readme"
Repository = "https://github.com/Sharathvc23/sm-bridge.git"
Issues = "https://github.com/Sharathvc23/sm-bridge/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/sm_bridge",
]

[tool.hatch.build.targets.wheel]
packages = ["sm_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
